--- a/Brokerages/QuantConnect.Brokerages.csproj
+++ b/Brokerages/QuantConnect.Brokerages.csproj
@@ -305,6 +305,10 @@
     <Compile Include="Bitfinex\BitfinexWebSocketWrapper.cs" />
     <Compile Include="Bitfinex\Messages.cs" />
     <Compile Include="Bitfinex\BitfinexSymbolMapper.cs" />
+    <Compile Include="Bybit\BybitBrokerage.cs" />
+    <Compile Include="Bybit\BybitBrokerage.Messaging.cs" />
+    <Compile Include="Bybit\BybitBrokerageFactory.cs" />
+    <Compile Include="Bybit\BybitSymbolMapper.cs" />
     <Compile Include="InteractiveBrokers\InteractiveBrokersStateManager.cs" />
     <Compile Include="IOrderBookUpdater.cs" />
     <Compile Include="DefaultOrderBook.cs" />
