--- a/Brokerages/QuantConnect.Brokerages.csproj
+++ b/Brokerages/QuantConnect.Brokerages.csproj
@@ -678,6 +678,8 @@
     <Compile Include="Tradier\Tokens.cs" />
     <Compile Include="Tradier\TradierBrokerageFactory.cs" />
     <Compile Include="Tradier\UserProfile.cs" />
+    <Compile Include="Bybit\BybitWebSocketWrapper.cs" />
+    <Compile Include="Bybit\BybitSubscriptionManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="InteractiveBrokers\IB-symbol-map.json">
